--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,6 +1,6 @@
 body{
   font-size: 24px;
   font-family:'Shadows Into Light', cursive;
-  background-color: gray;
+  background-color: cream;
   color:Red;
   }
